--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
-title: Your awesome title
-author: GitHub User
+title: Meh
+author: It's me :(
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+  how boring it all is :(
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: iHaqi_
+github_username:  ihaqi
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-hacker
+theme: minima
